--- a/voice-fit-app/package.json
+++ b/voice-fit-app/package.json
@@ -9,9 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
     "expo": "~53.0.0",
+    "lucide-react-native": "^0.552.0",
+    "nativewind": "^4.2.1",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-reanimated": "~3.15.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "tailwindcss": "^3.4.18",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@types/react": "~18.3.0",
