--- a/voice-fit-app/package.json
+++ b/voice-fit-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "voice-fit-app",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,16 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "expo": "~53.0.0",
+    "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.552.0",
     "nativewind": "^4.2.1",
     "react": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.5",
     "react-native-reanimated": "~3.15.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-web": "^0.19.13",
     "tailwindcss": "^3.4.18",
     "zustand": "^4.5.7"
   },
