--- a/voice-fit-app/tsconfig.json
+++ b/voice-fit-app/tsconfig.json
@@ -23,12 +23,9 @@
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
   ]
 }
-
