Update EAS project config and fix SDK 53 package versions
- Update EAS project ID to voice-fit organization (23c0dd9e-85e7-4343-b846-94b566f572ce)
- Add owner field for voice-fit organization
- Downgrade packages to SDK 53-compatible versions:
  - @react-native-async-storage/async-storage: 2.2.0 -> 2.1.2
  - @react-native-community/slider: 5.1.1 -> 4.5.6
  - expo-location: 19.0.7 -> 18.1.6
  - lottie-react-native: 7.3.4 -> 7.2.2
  - react-native-maps: 1.26.18 -> 1.20.1
  - react-native-svg: 15.11.2 (pinned)
  - jest: 30.2.0 -> 29.7.0
  - jest-expo: 54.0.13 -> 53.0.10
  - typescript: 5.3.0 -> 5.8.3

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -58,8 +58,9 @@
     },
     "extra": {
       "eas": {
-        "projectId": "90cab9ec-0491-445b-81a3-c290125ebe5a"
+        "projectId": "23c0dd9e-85e7-4343-b846-94b566f572ce"
       }
-    }
+    },
+    "owner": "voice-fit"
   }
 }
