--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.5",
     "@nozbe/watermelondb": "^0.27.1",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/slider": "^5.1.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/slider": "4.5.6",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -32,9 +32,9 @@
     "@supabase/supabase-js": "^2.79.0",
     "expo": "~53.0.0",
     "expo-haptics": "~14.1.4",
-    "expo-location": "^19.0.7",
+    "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
-    "lottie-react-native": "^7.3.4",
+    "lottie-react-native": "7.2.2",
     "lucide-react-native": "^0.552.0",
     "nativewind": "^4.2.1",
     "react": "19.0.0",
@@ -42,11 +42,11 @@
     "react-native": "0.79.6",
     "react-native-audio-recorder-player": "^4.5.0",
     "react-native-gifted-chat": "^2.8.1",
-    "react-native-maps": "^1.26.18",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.18",
     "victory-native": "^41.20.1",
@@ -61,10 +61,10 @@
     "@types/react": "~19.0.10",
     "detox": "^20.45.1",
     "detox-expo-helpers": "^0.6.0",
-    "jest": "^30.2.0",
-    "jest-expo": "^54.0.13",
+    "jest": "~29.7.0",
+    "jest-expo": "~53.0.10",
     "patch-package": "^8.0.1",
     "ts-jest": "^29.4.5",
-    "typescript": "^5.3.0"
+    "typescript": "~5.8.3"
   }
 }
