feat: Complete UI redesign (Sessions 5-7) + Navigation & Backend Integration
UI Redesign (Sessions 5-7):
- Session 5: Home Dashboard
  - Created MetricCard, TimelineItem, StatsOverview components
  - Redesigned HomeScreen with MacroFactor-inspired layout
  - Real WatermelonDB data integration (weekly stats, recent workouts)

- Session 6: Run Screen
  - Redesigned RunScreen with Runna-inspired map-first interface
  - Full-screen map with floating stats overlay
  - Color-coded control buttons (green start, orange pause, coral stop)

- Session 7: Integration & Testing Prep
  - Complete testing documentation
  - Code cleanup and error fixes

Navigation Integration:
- Updated RootNavigator with 4-tab bottom navigation (Home, Run, Chat, Profile)
- Updated AuthNavigator with proper React Navigation Stack
- Integrated ThemeContext for dynamic styling
- Removed 'Redesign' suffix from all screens

Backend Integration:
- Created API client for Railway FastAPI backend
- Type-safe API calls with automatic JWT authentication
- Chat endpoints connected to Railway
- Proper error handling and network detection

OAuth/SSO Setup:
- Added Apple Sign In support (expo-apple-authentication)
- Added Google Sign In support (expo-auth-session)
- Updated auth store with signInWithApple() and signInWithGoogle()
- Ready for provider configuration

Components Created (21 total):
- UI: Button, Input, Card, PillBadge
- Auth: SSOButton, AuthContainer, ErrorMessage
- Profile: Avatar, SettingsSection
- Chat: ChatBubble, ChatInput, ChatHeader
- Dashboard: MetricCard, TimelineItem, StatsOverview

Screens Created/Redesigned (7 total):
- SignInScreen, SignUpScreen (new)
- ProfileScreen (new)
- ChatScreen (redesigned)
- HomeScreen (redesigned)
- RunScreen (redesigned)
- ComponentTestScreen (new)

Configuration:
- Added .env.example with all required environment variables
- Updated package.json with OAuth packages
- Created comprehensive documentation (7 guides, ~3000 lines)

Documentation:
- COMPLETE_HAND

--- a/apps/mobile/ios/VoiceFit/Info.plist
+++ b/apps/mobile/ios/VoiceFit/Info.plist
@@ -44,10 +44,20 @@
       <key>NSAllowsLocalNetworking</key>
       <true/>
     </dict>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Allow Voice Fit to access your location to track your runs and outdoor workouts.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Allow Voice Fit to access your location in the background to track your runs.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Allow Voice Fit to access your location while using the app to track your runs.</string>
     <key>NSMicrophoneUsageDescription</key>
     <string>Allow Voice Fit to use your microphone for voice logging.</string>
     <key>NSSpeechRecognitionUsageDescription</key>
     <string>Allow Voice Fit to recognize your speech for workout logging.</string>
+    <key>UIBackgroundModes</key>
+    <array>
+      <string>location</string>
+    </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
