--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -31,9 +31,12 @@
     "@react-navigation/native-stack": "^7.6.2",
     "@supabase/supabase-js": "^2.79.0",
     "expo": "~53.0.0",
+    "expo-apple-authentication": "~7.1.6",
+    "expo-auth-session": "~6.1.6",
     "expo-haptics": "~14.1.4",
     "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.1.4",
     "lottie-react-native": "7.2.2",
     "lucide-react-native": "^0.552.0",
     "nativewind": "^4.2.1",
