--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -38,7 +38,11 @@
         "NSLocationAlwaysAndWhenInUseUsageDescription": "Voice Fit needs access to your location to track your runs and outdoor workouts.",
         "NSLocationWhenInUseUsageDescription": "Voice Fit needs access to your location while using the app to track your runs.",
         "NSLocationAlwaysUsageDescription": "Voice Fit needs access to your location in the background to track your runs.",
-        "UIBackgroundModes": ["location"]
+        "UIBackgroundModes": ["location"],
+        "NSSupportsLiveActivities": true
+      },
+      "entitlements": {
+        "com.apple.developer.live-activities": true
       }
     },
     "android": {
@@ -50,7 +54,10 @@
         "android.permission.RECORD_AUDIO",
         "android.permission.ACCESS_FINE_LOCATION",
         "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.ACCESS_BACKGROUND_LOCATION"
+        "android.permission.ACCESS_BACKGROUND_LOCATION",
+        "android.permission.FOREGROUND_SERVICE",
+        "android.permission.FOREGROUND_SERVICE_HEALTH",
+        "android.permission.POST_NOTIFICATIONS"
       ]
     },
     "web": {
