feat: complete integration testing framework and first test run
- Created integration test environment setup (no mocking)
- Added backend API tests (11/13 passing - 85% success)
- Configured Railway backend connection
- Set up test user in Supabase
- Added dotenv for environment loading
- Documented test results and known issues

Known Issues:
- Auth client configuration needs alignment with mobile app
- /api/voice/log endpoint returns 404 (needs investigation)
- OPTIONS handler needs to be added to backend

Tests work against real Railway backend and Supabase!

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -64,6 +64,7 @@
     "@types/react": "~19.0.10",
     "detox": "^20.45.1",
     "detox-expo-helpers": "^0.6.0",
+    "dotenv": "^17.2.3",
     "jest": "~29.7.0",
     "jest-expo": "~53.0.10",
     "patch-package": "^8.0.1",
