--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -30,6 +30,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@shopify/react-native-skia": "^2.4.0",
     "@supabase/supabase-js": "^2.79.0",
     "expo": "~53.0.0",
     "expo-analytics-amplitude": "~11.3.0",
@@ -45,6 +46,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-gesture-handler": "^2.29.1",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-keyboard-controller": "^1.19.5",
     "react-native-maps": "1.20.1",
