--- a/apps/web-dashboard/package.json
+++ b/apps/web-dashboard/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.0",
     "recharts": "^3.4.1",
     "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
